2010-07-23  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15195: TSanalyzer: Add link to breakpoints also in syntaxhighlight mode

2010-07-23  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15203: htmlArea RTE: Modify link option missing in context menu

2010-07-21  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #15179: Tree depth retrieval inconsistently limited to 20 levels int3lib_pageSelect

2010-07-21  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15067: Background Image in Element Browser is repeated, but should not be! (Thanks to Steffen Gebert)
	* Fixed bug #15156: Text in template analyzer is "white on white" if syntax highlighting is disabled (Thanks to Steffen Gebert)

2010-07-19  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #15130: Backend search does not find non-latin1 characters
	* Fixed bug #15128: RTE creates <link> tag incorrectly if there is a non-empty title

2010-07-18  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #15169: Superfluous comma in CSS

2010-07-18  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #15000: remove IM 4.2.9 recommendation in install tool (Thanks to Steffen Gebert)
	* Fixed bug #14998: Upgrade Wizards: Headlines have too much space below (Thanks to Steffen Gebert)

2010-07-16  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #14982: Make alt_doc.php unit testable (Thanks to Ingo Schmitt)
	* Fixed bug #15142: [Unit tests] Remove unnecessary require_once() calls

2010-07-14  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #14911: Validation errors in list view (Thanks to Georg Ringer)

2010-07-14  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #6208: zlib must be compiled in to make an extension lookup
	* Fixed bug #12322: cHash is generated when no parameters are given

2010-07-13  Francois Suter  <francois@typo3.org>

	* Fixed bug: #15054: Scheduler: BE module does not use new skin properly

2010-07-13  Jeff Segars  <jeff@webempoweredchurch.org>
